force-app/main/default/objects/AWB_Number__c/AWB_Number__c.object-meta.xml
<CustomObject>
    <label>AWB Number</label>
    <nameField>
        <displayFormat>AWB-{00000}</displayFormat>
        <label>AWB Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWB Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>