force-app/main/default/objects/AWB_Number__c/fields/AWB_Code__c.field-meta.xml
<CustomField>
    <fullName>AWB_Code__c</fullName>
    <label>AWB Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>