force-app/main/default/objects/AWB_Number__c/fields/Linehaul_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linehaul Tracking</label>
    <referenceTo>Linehaul_Tracking__c</referenceTo>
    <relationshipLabel>AWB Numbers</relationshipLabel>
    <relationshipName>AWB_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>