force-app/main/default/objects/AWB_Number__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>AWB Numbers</relationshipLabel>
    <relationshipName>AWB_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>